# Palm-1.0

PalmClient/: CMakeLists.txt
PalmClient/include/PalmClient/: AESCoder.h  Camera.h  Client.h  ConstVar.h  MsgNode.h  Net.h  Palm.h
PalmClient/lib/boost/: libboost_container.so.1.83.0  libboost_context.so.1.83.0  libboost_contract.so.1.83.0  libboost_locale.so.1.83.0  libboost_math_c99f.so.1.83.0  libboost_math_c99l.so.1.83.0  libboost_math_tr1.so.1.83.0  libboost_math_tr1f.so.1.83.0  libboost_math_tr1l.so.1.83.0  libboost_nowide.so.1.83.0  libboost_program_options.so.1.83.0  libboost_random.so.1.83.0  libboost_serialization.so.1.83.0  libboost_stacktrace_addr2line.so.1.83.0  libboost_stacktrace_noop.so.1.83.0  libboost_system.so.1.83.0  libboost_thread.so.1.83.0  libboost_type_erasure.so.1.83.0  libboost_unit_test_framework.so.1.83.0  libboost_wave.so.1.83.0  libboost_wserialization.so.1.83.0
PalmClient/lib/boost/cmake/boost_atomic-1.83.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
PalmClient/lib/boost/cmake/boost_chrono-1.83.0/: boost_chrono-config.cmake
PalmClient/lib/boost/cmake/boost_container-1.83.0/: boost_container-config.cmake  libboost_container-variant-shared.cmake
PalmClient/lib/boost/cmake/boost_context-1.83.0/: boost_context-config.cmake  libboost_context-variant-shared.cmake  libboost_context-variant-static.cmake
PalmClient/lib/boost/cmake/boost_contract-1.83.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
PalmClient/lib/boost/cmake/boost_coroutine-1.83.0/: libboost_coroutine-variant-static.cmake
PalmClient/lib/boost/cmake/boost_exception-1.83.0/: boost_exception-config.cmake
PalmClient/lib/boost/cmake/boost_fiber-1.83.0/: boost_fiber-config.cmake  libboost_fiber-variant-static.cmake
PalmClient/lib/boost/cmake/boost_filesystem-1.83.0/: boost_filesystem-config.cmake
PalmClient/lib/boost/cmake/boost_graph-1.83.0/: boost_graph-config.cmake
PalmClient/lib/boost/cmake/boost_headers-1.83.0/: boost_headers-config.cmake
PalmClient/lib/boost/cmake/boost_iostreams-1.83.0/: boost_iostreams-config.cmake
PalmClient/lib/boost/cmake/boost_json-1.83.0/: libboost_json-variant-static.cmake
PalmClient/lib/boost/cmake/boost_locale-1.83.0/: boost_locale-config.cmake  libboost_locale-variant-static.cmake
PalmClient/lib/boost/cmake/boost_log-1.83.0/: boost_log-config.cmake  libboost_log-variant-shared.cmake  libboost_log-variant-static.cmake
PalmClient/lib/boost/cmake/boost_log_setup-1.83.0/: boost_log_setup-config.cmake  libboost_log_setup-variant-static.cmake
PalmClient/lib/boost/cmake/boost_math_c99-1.83.0/: boost_math_c99-config.cmake  libboost_math_c99-variant-shared.cmake  libboost_math_c99-variant-static.cmake
PalmClient/lib/boost/cmake/boost_math_c99l-1.83.0/: boost_math_c99l-config.cmake  libboost_math_c99l-variant-static.cmake
PalmClient/lib/boost/cmake/boost_math_tr1-1.83.0/: libboost_math_tr1-variant-shared.cmake  libboost_math_tr1-variant-static.cmake
PalmClient/lib/boost/cmake/boost_math_tr1f-1.83.0/: libboost_math_tr1f-variant-shared.cmake  libboost_math_tr1f-variant-static.cmake
PalmClient/lib/boost/cmake/boost_math_tr1l-1.83.0/: boost_math_tr1l-config.cmake
PalmClient/lib/boost/cmake/boost_nowide-1.83.0/: boost_nowide-config.cmake
PalmClient/lib/boost/cmake/boost_numpy-1.83.0/: boost_numpy-config.cmake
PalmClient/lib/boost/cmake/boost_program_options-1.83.0/: libboost_program_options-variant-shared.cmake  libboost_program_options-variant-static.cmake
PalmClient/lib/boost/cmake/boost_python-1.83.0/: libboost_python-variant-shared-py2.7.cmake  libboost_python-variant-static-py2.7.cmake
PalmClient/main/: main.cpp
PalmClient/src/: AESCoder.cpp  Camera.cpp  Client.cpp  MsgNode.cpp  Net.cpp  Palm.cpp
PalmServer/: CMakeLists.txt
PalmServer/include/PalmServer/: CServer.h  CSession.h  ConstVar.h  LogicSystem.h  MsgNode.h  Singleton.hpp
PalmServer/lib/boost/: libboost_atomic.so.1.83.0  libboost_chrono.so.1.83.0  libboost_coroutine.so.1.83.0  libboost_date_time.so.1.83.0  libboost_fiber.so.1.83.0  libboost_filesystem.so.1.83.0  libboost_graph.so.1.83.0  libboost_iostreams.so.1.83.0  libboost_json.so.1.83.0  libboost_log.so.1.83.0  libboost_log_setup.so.1.83.0  libboost_math_c99.so.1.83.0  libboost_numpy27.so.1.83.0  libboost_prg_exec_monitor.so.1.83.0  libboost_python27.so.1.83.0  libboost_regex.so.1.83.0  libboost_stacktrace_backtrace.so.1.83.0  libboost_stacktrace_basic.so.1.83.0  libboost_timer.so.1.83.0  libboost_url.so.1.83.0
PalmServer/main/: main.cpp
PalmServer/src/: CServer.cpp  CSession.cpp  LogicSystem.cpp  MsgNode.cpp
(+86 files in other folders)
